增加gird布局实现垂直水平居中

--- a/基础知识/demo/1.html
+++ b/基础知识/demo/1.html
@@ -86,6 +86,18 @@
     .child5 {
       background-color: #10cf86;
     }
+
+    .parent6 {
+      display: grid;
+      width: 300px;
+      height: 300px;
+      border: 1px solid #0944e6;
+    }
+    .child6 {
+      align-self: center;
+      justify-self: center;
+      background-color: #10cf86;
+    }
   </style>
 </head>
 
@@ -112,6 +124,10 @@
   <p>3. table-cell</p>
   <div class="parent5">
     <div class="child5">hello world</div>
+  </div>
+  <p>4. grid</p>
+  <div class="parent6">
+    <div class="child6">hello world</div>
   </div>
 
 </body>
