--- a/基础知识/demo/shengbei_layout.html
+++ b/基础知识/demo/shengbei_layout.html
@@ -60,7 +60,17 @@
   <div class="app">
     <div class="header"></div>
     <div class="container">
-      <div class="center"></div>
+      <div class="center">
+        <div>圣杯布局</div>
+        <div>圣杯布局</div>
+        <div>圣杯布局</div>
+        <div>圣杯布局</div>
+        <div>圣杯布局</div>
+        <div>圣杯布局</div>
+        <div>圣杯布局</div>
+        <div>圣杯布局</div>
+        <div>圣杯布局</div>
+      </div>
       <div class="left"></div>
       <div class="right"></div>
     </div>
